Use format string for err(). From Henning Petersen in PR 44326.